# rebox

./: Cargo.toml  README.md  flake.nix
.devcontainer/: devcontainer.json
src/rebox-core/: Cargo.toml
src/rebox-core/examples/: hello.rs
src/rebox-core/src/: lib.rs
src/rebox-storage/: Cargo.toml
src/rebox-storage/examples/: crud.rs  departments.rs  hello.rs
src/rebox-storage/src/: database.rs  lib.rs  tests.rs
src/rebox-storage/src/database/: builder.rs  mod.rs  tests.rs
src/rebox-storage/src/database/connection/: builder.rs  mod.rs
src/rebox-storage/src/database/driver/key_value/: builder.rs  create_table.rs  drop_table.rs  get_table_row.rs  get_table_rows.rs  get_table_single_row.rs  helpers.rs  insert_into_table.rs  list_tables.rs  mod.rs  number_of_stores.rs  table_exists.rs
src/rebox-storage/src/database/driver/key_value/moz_rkv/: mod.rs
src/rebox-storage/src/database/fields/: mod.rs  name.rs  rebox_master.rs  rebox_schema.rs  rebox_sequence.rs
src/rebox-storage/src/database/fields/rebox_sequence/: mod.rs  tests.rs
src/rebox-storage/src/database/fields/tables/: mod.rs  tests.rs
src/rebox-storage/src/database/metadata/: mod.rs  rebox_master.rs  rebox_schema.rs  rebox_sequence.rs  rebox_stat.rs
src/rebox-storage/src/database/row/: mod.rs
src/rebox-storage/src/database/row/column/: data.rs  mod.rs
src/rebox-storage/src/database/tables/: mod.rs  rebox_sequence.rs  tests.rs
src/rebox-storage/src/drivers/: key_value.rs  memory.rs  mod.rs
src/rebox-storage/src/drivers/key_value/: builder.rs  mod.rs
src/rebox-storage/src/drivers/key_value/moz_rkv/: mod.rs
src/rebox-storage/src/manager/: mod.rs
src/rebox-storage/src/table/: columns.rs  file_name.rs  mod.rs  name.rs
src/rebox-types/: Cargo.toml
src/rebox-types/src/: helpers.rs  lib.rs
xtask/: Cargo.toml
xtask/src/: cli.rs  helpers.rs  main.rs
(+28 files in other folders)
