[package]
edition = "2021"
name = "rebox-storage"
version = "0.0.1"

[dependencies]
anyhow = { workspace = true }
bytes = { workspace = true }
rebox-types = { path = "../rebox-types" }
rkv = "0.18.4"
tempfile = "3.6.0"
bincode = { workspace = true }


[dev-dependencies]
test-case = { workspace = true }
