[package]
name = "rebox-storage"
version = "0.0.1"
publish.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true


[dependencies]
anyhow = { workspace = true }
bytes = { workspace = true }
rebox-types = { path = "../rebox-types" }
rebox_derive = { path = "../rebox_derive" }
bincode = { workspace = true }
rkv = "0.18.4"
tempfile = "3.6.0"

[dev-dependencies]
chrono = { workspace = true, features = ["clock"] }
test-case = { workspace = true }
